[package]
name = "waifu-http"
version = "0.1.0"
edition = "2021"
exclude = [
  "examples/*"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.29"
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
env_logger = "0.10.1"
chrono = "0.4.31"
async-trait = "0.1.75"

[dependencies.async-std]
version = "1.6"
features = ["attributes"]
